#533: Fix sonar warnings (#633)