@@ -6,7 +6,6 @@ import static org.hamcrest.Matchers.equalTo;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -28,6 +27,6 @@ class ChangelogFileGeneratorTest {
     }
 
     private List<ChangesFileName> files(final String... versions) {
-        return Arrays.stream(versions).map(ChangesFileName::new).collect(Collectors.toList());
+        return Arrays.stream(versions).map(ChangesFileName::new).toList();
     }
 }
